# SetCover

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
In1/: input_10_0  input_10_1  input_10_2  input_10_3  input_10_4  input_10_5  input_10_6  input_10_7  input_10_8  input_10_9  input_11_0  input_11_1  input_11_2  input_11_3  input_11_4  input_11_5  input_11_6  input_11_7  input_11_8  input_11_9  input_12_0  input_12_1  input_12_2  input_12_3  input_12_4  input_12_5  input_12_6  input_12_7  input_12_8  input_12_9  input_13_0  input_13_1  input_13_2  input_13_3  input_13_4  input_13_5  input_13_6  input_13_7  input_13_8  input_13_9  (+245 more)
In2/: input_10_0  input_10_1  input_10_2  input_10_3  input_10_4  input_10_5  input_10_6  input_10_7  input_10_8  input_10_9  input_11_0  input_11_1  input_11_2  input_11_3  input_11_4  input_11_5  input_11_6  input_11_7  input_11_8  input_11_9  input_12_1  input_12_2  input_12_3  input_12_4  input_12_5  input_12_6  input_12_7  input_12_8  input_12_9  input_13_0  input_13_1  input_13_2  input_13_3  input_13_4  input_13_5  input_13_6  input_13_7  input_13_8  input_13_9  input_14_0  (+248 more)
include/: Instance.h  MaxHeap.h  MinHeap.h  PairCompartor.h  Reducer.h  Solver.h  Verifier.h  Verifyer.h
inputs/: .gitignore
src/: Reducer.cpp  main.cpp  preprocess.cpp
